Fixes alignment of signature message

--- a/less/base.less
+++ b/less/base.less
@@ -103,7 +103,7 @@ h2 {
 }
 
 .signature {
-  margin-top: -54px;
+  margin-top: -51px;
   text-align: center;
 
   .avatar,
@@ -136,13 +136,14 @@ h2 {
     }
   }
   .signature-copy {
-    padding-top: 8px;
+    padding-top: 6px;
     padding-left: 10px;
     
     .message {
-      font-size: 19px;
+      font-size: 18px;
       font-weight: 600;
       line-height: 24px;
+      text-shadow: 0 3px 3px rgba(0, 0, 0, 0.35);
     }
     strong {
       color: #FFC237;
